--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p><a href="https://g.co/kgs/dT6bwzm" target="_blank" style="color: #2c9c5f;">Finca La Perla, Filandia</a>.</p>
         <p>Como puede hacer frío, no olviden traer cobijas, etc...</p>
         <p>También pueden llevar algo para compartir: comida, juegos, historias, aguardiente...</p>
-        <p>Avísenme si se animan...</p>
+        <p>Contamos con su asistencia 😉 </p>
         <p>¡Los queremos mucho! 💛</p>
       </div>
     </div>
