--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="contenido">
         <strong>Hola, Familia</strong>
         <p>Queremos invitarlos con mucho cariño a una lunada familiar muy especial...</p>
-        <p>Esperamos contar con su compañía el próximo fin de semana del 28 al 29 de junio...</p>
+        <p>Esperamos contar con su compañía el próximo fin de semana del 28 al 29 de junio, como punto de partida tenemos el estadio San Jose a las 6 PM. </p>
         <p>Nos vamos a reunir en un sitio hermoso, rodeado de naturaleza...</p>
         <p><a href="https://g.co/kgs/dT6bwzm" target="_blank" style="color: #2c9c5f;">Finca La Perla, Filandia</a>.</p>
         <p>Como puede hacer frío, no olviden traer cobijas, etc...</p>
