--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="carta" id="carta">
       <div class="contenido">
         <strong>Hola, Familia</strong>
-        <p>Queremos invitarlos con mucho cariño a una lunada familiar muy especial...</p>
+        <p>Queremos invitarlos con mucho cariño a una lunada familiar muy especial</p>
         <p>Esperamos contar con su compañía el próximo fin de semana del 28 al 29 de junio, como punto de partida tenemos el estadio San Jose a las 6 PM. </p>
-        <p>Nos vamos a reunir en un sitio hermoso, rodeado de naturaleza...</p>
-        <p><a href="https://g.co/kgs/dT6bwzm" target="_blank" style="color: #2c9c5f;">Finca La Perla, Filandia</a>.</p>
-        <p>Como puede hacer frío, no olviden traer cobijas, etc...</p>
-        <p>También pueden llevar algo para compartir: comida, juegos, historias, aguardiente...</p>
+        <p>Nos vamos a reunir en un sitio hermoso, rodeado de naturaleza donde podremos disfrutar tranquilos</p>
+        <p><a href="https://g.co/kgs/dT6bwzm" target="_blank" style="color: #2c9c5f;">Ubicación ⬆</a>.</p>
+        <p>Como hace bastante frio, no olviden llevar cobijas y unos aguardientes</p>
+        <p>También pueden llevar algo para compartir: comida, juegos, historias y toda su disposición</p>
         <p>Contamos con su asistencia 😉 </p>
         <p>¡Los queremos mucho! 💛</p>
       </div>
