--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Como hace bastante frio, no olviden llevar cobijas y unos aguardientes</p>
         <p>También pueden llevar algo para compartir: comida, juegos, historias y toda su disposición.</p>
         <p>Contamos con su asistencia 😉 </p>
-        <p>¡Los queremos mucho! ❤</p>
+        <p>¡Los queremos mucho! ❤️</p>
       </div>
     </div>
   </div>
